FINALIZANDO O INDEX.HTML

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>  Workshop Git e GitHub  </h1>
     <p>Estou elaborando um site para testar o git</p>
+    <p>Final do trabalho de hoje</p>
 </body>
 </html>
